<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MandoIOIO</string>
    <string name="pitch_text">Pitch</string>
    <string name="roll_text">Roll</string>
    <string name="pitch_value">0</string>
    <string name="roll_value">0</string>
    <string name="video"></string>
    <string name="stop">Stop</string>
    <string name="sett">Settings</string>
    <string name="Record">Record</string>
    <string name="ceross">000</string>
    <string name="uncero">0</string>
    <string name="fps">FPS</string>
    <string name="description">flecha</string>
    <string name="VozCode">VozCode</string>
    <string name="cambiomarcha">cambiomarcha</string>
    <string name="R">Back</string>
    <string name="Back">R</string>
    <string name="Forward">D</string>

</resources>
