<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_loyout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/videoImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/video"
        android:src="@drawable/abc_ab_stacked_transparent_dark_holo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pitch_text"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/pitch_text" />

            <TextView
                android:id="@+id/pitch_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pitch_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/roll_text"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/roll_text" />

            <TextView
                android:id="@+id/roll_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roll_value" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/stop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="stop"
        android:text="@string/stop" />

    <Button
        android:id="@+id/acelera"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/decelera"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/decelera"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="54dp" />

    <TextView
        android:id="@+id/velocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/acelera"
        android:text="000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

</RelativeLayout>